# asw_workshop

./: CMakeLists.txt
include/RTE/: RTE.h
src/: CMakeLists.txt  MyAswProject.c  MyAswProject.h
src/InputWrapper/: CMakeLists.txt  InputWrapper.c  InputWrapper.h
src/OutputWrapper/: CMakeLists.txt  OutputWrapper.c  OutputWrapper.h
src/module1/: CMakeLists.txt  module1.c  module1.h
src/module2/: CMakeLists.txt  module2.c  module2.h
src/module3/: CMakeLists.txt  module3.c  module3.h
test/: CMakeLists.txt
test/swc/: CMakeLists.txt  RTEMock.c  RTEMock.cc  swcTest.cc
test/unit/: CMakeLists.txt
test/unit/module1UT/: CMakeLists.txt  module1UT.cc
test/unit/module2UT/: CMakeLists.txt  module2UT.cc
test/unit/module3UT/: CMakeLists.txt  module3UT.cc
